fix security config